Implemented endpoint for delete
